[gd_scene load_steps=6 format=3 uid="uid://f652rwx2b5b4"]

[ext_resource type="Theme" uid="uid://5os27plblg4t" path="res://resources/ui/theme.tres" id="1_uthh7"]
[ext_resource type="StyleBox" uid="uid://baihiuteq2brc" path="res://resources/ui/panel_bg_outline.tres" id="2_4pm7y"]
[ext_resource type="Script" uid="uid://b6cdkgodttbdx" path="res://scripts/ui/gui/wall_select_menu.gd" id="3_uthh7"]
[ext_resource type="StyleBox" uid="uid://bd5p5yxhyubti" path="res://resources/ui/panel_-1.tres" id="4_e0efh"]
[ext_resource type="Texture2D" uid="uid://t57xpvt76yec" path="res://assets/ui/crystal.svg" id="5_4aetf"]

[node name="WallSelectMenu" type="PanelContainer"]
offset_right = 768.0
offset_bottom = 190.0
theme = ExtResource("1_uthh7")
theme_override_styles/panel = ExtResource("2_4pm7y")
script = ExtResource("3_uthh7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 16

[node name="WallLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
theme = ExtResource("1_uthh7")
text = "WallName"
horizontal_alignment = 1
autowrap_mode = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.1
theme = ExtResource("1_uthh7")
theme_override_styles/panel = ExtResource("4_e0efh")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 12
theme_override_constants/margin_bottom = 12

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sell"

[node name="SellButton" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/SellButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -27.5
offset_right = 50.0
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2

[node name="SellLabel" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/SellButton/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "500"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/SellButton/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_4aetf")
expand_mode = 3
